# RelationalAlgebra

./: .gitignore  Dump.hs  README.md  RelAl.hs  Select.hs  dump.sql  examples.hs  ideas.md  queries.hs  queries.sql  relal.cabal  tests.hs  todos.md
Data/: RelationalAlgebra.hs
Data/Relation/: Core.hs  Experimental.hs  Junk.hs
src/: RelAl.hs  Select.hs  queries.hs
tests/: tests.hs
