Name:                relal
Version:             0.1
Synopsis:            A higher-order relational algebra library
Description:         ???
License:             ???
License-file:        ???
Category:            Algebra
Author:              Matt Fenwick
Maintainer:          Matt Fenwick <mfenwick100@gmail.com>
Build-Type:          Simple
Cabal-Version:       >=1.6.0.1
Stability:           experimental


Library
  HS-Source-Dirs:    src
  Build-Depends:     ???
  Exposed-Modules:   ???